--- a/dvclive/report.html
+++ b/dvclive/report.html
@@ -25,7 +25,7 @@
 <tr><th style="text-align: right;">  accuracy</th><th style="text-align: right;">  step</th></tr>
 </thead>
 <tbody>
-<tr><td style="text-align: right;">   0.90862</td><td style="text-align: right;">     2</td></tr>
+<tr><td style="text-align: right;">   0.92109</td><td style="text-align: right;">     8</td></tr>
 </tbody>
 </table>
             </div>
@@ -33,7 +33,7 @@
 
     <div id = "static_accuracy">
         <script type = "text/javascript">
-            var spec = {"$schema": "https://vega.github.io/schema/vega-lite/v5.json", "data": {"values": [{"step": "0", "accuracy": "0.84753", "rev": "workspace"}, {"step": "1", "accuracy": "0.87761", "rev": "workspace"}, {"step": "2", "accuracy": "0.90862", "rev": "workspace"}]}, "title": "accuracy", "width": 300, "height": 300, "params": [{"name": "smooth", "value": 0.001, "bind": {"input": "range", "min": 0.001, "max": 1, "step": 0.001}}], "layer": [{"mark": "line", "encoding": {"x": {"field": "step", "type": "quantitative", "title": "step"}, "y": {"field": "accuracy", "type": "quantitative", "title": "accuracy", "scale": {"zero": false}}, "color": {"field": "rev", "type": "nominal"}}, "transform": [{"loess": "accuracy", "on": "step", "groupby": ["rev", "filename", "field", "filename::field"], "bandwidth": {"signal": "smooth"}}]}, {"mark": {"type": "point", "tooltip": {"content": "data"}}, "encoding": {"x": {"field": "step", "type": "quantitative", "title": "step"}, "y": {"field": "accuracy", "type": "quantitative", "title": "accuracy", "scale": {"zero": false}}, "color": {"field": "rev", "type": "nominal"}}}]};
+            var spec = {"$schema": "https://vega.github.io/schema/vega-lite/v5.json", "data": {"values": [{"step": "0", "accuracy": "0.84753", "rev": "workspace"}, {"step": "1", "accuracy": "0.87761", "rev": "workspace"}, {"step": "2", "accuracy": "0.90862", "rev": "workspace"}, {"step": "3", "accuracy": "0.91023", "rev": "workspace"}, {"step": "4", "accuracy": "0.91101", "rev": "workspace"}, {"step": "5", "accuracy": "0.91543", "rev": "workspace"}, {"step": "6", "accuracy": "0.91559", "rev": "workspace"}, {"step": "7", "accuracy": "0.91653", "rev": "workspace"}, {"step": "8", "accuracy": "0.92109", "rev": "workspace"}]}, "title": "accuracy", "width": 300, "height": 300, "params": [{"name": "smooth", "value": 0.001, "bind": {"input": "range", "min": 0.001, "max": 1, "step": 0.001}}], "layer": [{"mark": "line", "encoding": {"x": {"field": "step", "type": "quantitative", "title": "step"}, "y": {"field": "accuracy", "type": "quantitative", "title": "accuracy", "scale": {"zero": false}}, "color": {"field": "rev", "type": "nominal"}}, "transform": [{"loess": "accuracy", "on": "step", "groupby": ["rev", "filename", "field", "filename::field"], "bandwidth": {"signal": "smooth"}}]}, {"mark": {"type": "point", "tooltip": {"content": "data"}}, "encoding": {"x": {"field": "step", "type": "quantitative", "title": "step"}, "y": {"field": "accuracy", "type": "quantitative", "title": "accuracy", "scale": {"zero": false}}, "color": {"field": "rev", "type": "nominal"}}}]};
             vegaEmbed('#static_accuracy', spec);
         </script>
     </div>
